test-cases/final-dump/foreign_error.exp
Error detected during type checking of module(s) foreign_error
[91mfinal-dump/foreign_error.wybe:4:5: Unknown llvm instruction 'no_such'
[0m[91mfinal-dump/foreign_error.wybe:6:33: Unknown llvm instruction 'no_such2'
[0m[91mfinal-dump/foreign_error.wybe:11:5: Foreign call 'blah' with unknown language 'no_such_language'
[0m[91mfinal-dump/foreign_error.wybe:13:32: Foreign call 'blah' with unknown language 'no_such_language2'
[0m[91mfinal-dump/foreign_error.wybe:18:5: Foreign call 'add' with arity 2; should be 3
[0m[91mfinal-dump/foreign_error.wybe:20:32: Foreign call 'add' with arity 4; should be 3
[0m
